--- a/README
+++ b/README
@@ -46,7 +46,29 @@ Prelude Numeric.LinearAlgebra> u <> d <> trans v
 Prelude Numeric.GSL> :q
 Leaving GHCi.
 
---------------------------------------------------------------------------------------
+CHANGES
+
+This is a new version of GSLHaskell. The package is (provisionally)
+called \C{hssl} (a simple scientific library for Haskell) because only
+a small part of GSL is available and linear algebra is based on LAPACK.
+
+The code has been extensively refactored. There is a new internal representation
+which admits both C and Fortran matrices and avoids many transposes.
+
+There are only minor API changes:
+
+- the matrix product operator \C{(<>)} is now overloaded only for matrix-matrix,
+matrix-vector and vector-matrix, with the same base type. The dot product and the scaling
+of vectors or matrices is now denoted by `dot` and `scale`. Conversions from real to
+complex objects must be explicit.
+
+- Most linear algebra functions admit both real and complex objects. Utilities such as
+ident or constant are now polymorphic.
+
+- Runtime errors produced by GSL or LAPACK can be handled using \C{Control.Exeception.catch}.
+
+Old GSLHaskell code will work with small modifications.
+
 ACKNOWLEDGEMENTS
 
 I thank Henning Thielemann and all the people in the Haskell mailing lists for their help.
@@ -63,3 +85,26 @@ I thank Henning Thielemann and all the people in the Haskell mailing lists for t
 - Pedro E. López de Teruel fixed the interface to lapack.
 
 - Antti Siira discovered a bug in the plotting functions.
+
+INSTALLATION ON WINDOWS
+
+1) Download the developer files gsl-1.8-lib.zip from
+   http://gnuwin32.sourceforge.net/packages/gsl.htm
+   and copy the gsl folder (under include) to the include folder of ghc:
+   C:\ghc\ghc.6.6.1\include
+
+2) Install the package as usual from the command line in the hssl-0.1 folder:
+       runhaskell Setup.lhs configure
+       runhaskell Setup.lhs build
+       runhaskell Setup.lhs install
+
+3) Copy libgsl.dll, libcblas.dll (from the binaries package gsl-1.8.bin.zip)
+   and liblapack.dll (borrowed from the R system) to the folder where 
+   hssl has been installed: C:\haskell\hss-0.1\ghc-6.6.1. They are needed to compile programs.
+   These three dlls are also available from http://perception.inf.um.es/darcs/HSSL/dll1.zip
+
+4) Copy the dlls at http://perception.inf.um.es/darcs/HSSL/dll2.zip to C:\windows\system
+   They are required to run the programs and ghci.
+
+Unfortunately the lapack dll supplied by the R system does not include zgels_ and zgelss_,
+so the functions depending on them will produced a "non supported" runtime error.
