--- a/README
+++ b/README
@@ -89,10 +89,12 @@ INSTALLATION ON WINDOWS
 
 3) Copy libgsl.dll, libcblas.dll (from the binaries package gsl-1.8.bin.zip)
    and liblapack.dll (borrowed from the R system) to the folder where 
-   hssl has been installed: C:\haskell\hss-0.1\ghc-6.6.1. They are needed to compile programs.
-   These three dlls are also available from http://perception.inf.um.es/darcs/HSSL/dll1.zip
+   hssl has been installed: C:\Program Files\haskell\hss-0.1\ghc-6.6.1.
+   They are needed to compile programs.
+   These three dlls are also available from http://perception.inf.um.es/~aruiz/darcs/HSSL/dll1.zip
 
-4) Copy the dlls at http://perception.inf.um.es/darcs/HSSL/dll2.zip to C:\windows\system
+4) Copy the dlls at http://perception.inf.um.es/~aruiz/darcs/HSSL/dll2.zip
+   to the working directory or C:\windows\system
    They are required to run the programs and ghci.
 
 Unfortunately the lapack dll supplied by the R system does not include zgels_ and zgelss_,
