--- a/README
+++ b/README
@@ -110,7 +110,7 @@ There are only minor API changes:
 
 Old GSLHaskell code will work with small modifications.
 
-INSTALLATION ON WINDOWS (FIXME)
+INSTALLATION ON WINDOWS
 
 1) Download the developer files gsl-1.8-lib.zip from
    http://gnuwin32.sourceforge.net/packages/gsl.htm
@@ -125,15 +125,18 @@ INSTALLATION ON WINDOWS (FIXME)
 3) Copy libgsl.dll, libcblas.dll (from the binaries package gsl-1.8.bin.zip)
    and liblapack.dll (borrowed from the R system) to the folder where 
    hssl has been installed: C:\Program Files\haskell\hss-0.1\ghc-6.6.1.
+   Rename libcblas.dll to libblas.dll.
    They are needed to compile programs.
-   These three dlls are also available from http://perception.inf.um.es/~aruiz/darcs/HSSL/dll1.zip
+   These three dlls are also available from
+       http://perception.inf.um.es/~aruiz/darcs/HSSL/dll1.zip
 
 4) Copy the dlls at http://perception.inf.um.es/~aruiz/darcs/HSSL/dll2.zip
    to the working directory or C:\windows\system
    They are required to run the programs and ghci.
 
-Unfortunately the lapack dll supplied by the R system does not include zgels_, zgelss_, and zgees_,
-so the functions depending on them (linearSolveLS, linearSolveSVD, and schur for complex data)
+Unfortunately the lapack dll supplied by the R system does not include
+zgels_, zgelss_, and zgees_, so the functions depending on them
+(linearSolveLS, linearSolveSVD, and schur for complex data)
 will produce a "non supported in this OS" runtime error.
 
 If you find an alternative free and complete lapack.dll which works well
