--- a/README
+++ b/README
@@ -159,21 +159,25 @@ INSTALLATION ON WINDOWS ----------------------------------------
    These headers are also available from:
        http://perception.inf.um.es/~aruiz/darcs/hmatrix/gsl.zip
 
-2) Install the package as usual:
-       runhaskell Setup.lhs configure
-       runhaskell Setup.lhs build
-       runhaskell Setup.lhs install
-
-2.5) If configure cannot find ld please see:
-       http://article.gmane.org/gmane.comp.lang.haskell.cafe/32025
-
-3) Copy libgsl.dll, libcblas.dll (from the binaries package gsl-1.8.bin.zip)
-   and liblapack.dll (borrowed from the R system) to the folder in which
-   hmatrix has been installed: C:\Program Files\haskell\hmatrix-x.x.x.x\ghc-6.x.x.
+2) Copy libgsl.dll, libcblas.dll (from the binaries package gsl-1.8.bin.zip)
+   and liblapack.dll (borrowed from the R system) to the ghc folder, e.g.:
+       C:\ghc\ghc-6.x.x.
    Rename libcblas.dll to libblas.dll.
    They are needed to compile programs.
    These three dlls are available from:
        http://perception.inf.um.es/~aruiz/darcs/hmatrix/dll1.zip
+
+2.5) Remove the following functions from the export list of
+     lib/Numeric/GSL/Special/Ellint.hs:
+     ellint_Pcomp_e, ellint_Pcomp, ellint_Dcomp_e, ellint_Dcomp
+
+3) Install the package as usual:
+       runhaskell Setup.lhs configure
+       runhaskell Setup.lhs build
+       runhaskell Setup.lhs install
+
+3.5) If configure cannot find ld please see:
+       http://article.gmane.org/gmane.comp.lang.haskell.cafe/32025
 
 4) Copy the dlls available from:
        http://perception.inf.um.es/~aruiz/darcs/hmatrix/dll2.zip
